--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
 			<version>8.0.13</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
